# 365-days-of-web-dev

./: .gitignore  README.md
Fastapi/fastapi-mongo/: .env  README.md  main.py  pyproject.toml  test_mongo.py
Fastapi/fastapi-mongo/app/core/db/: database.py  settings.py
Fastapi/fastapi-mongo/app/core/helper/: response.py  student.py
Fastapi/fastapi-mongo/app/core/routes/: student.py
Fastapi/fastapi-mongo/app/core/schemas/: student.py
Fastapi/fastapi-mongo/app/v1/endpoints/: endpoint.py
Fastapi/ima/: Makefile  README.md  alembic.ini  main.py  pyproject.toml
Fastapi/ima/app/: .env.example  __init__.py
Fastapi/ima/app/api/: dependencies.py  v1.py
Fastapi/ima/app/api/routers/: orgs.py
Fastapi/ima/app/core/: config.py  logging.py
Fastapi/ima/app/core/db/: base.py  engine.py  models_registry.py  session.py
Fastapi/ima/app/core/http/: middleware.py
Fastapi/ima/app/domain/org/: models.py  repo.py  schemas.py  service.py
Fastapi/ima/app/domain/tenants/: models.py  repo.py  schemas.py
Fastapi/ima/app/domain/users/: models.py  repo.py  schemas.py  service.py
Fastapi/ima/app/tests/: conftest.py
Fastapi/ima/app/tests/e2e/: test_db_ping.py  test_health.py  test_health_logging_smoke.py  test_whoami.py
Fastapi/ima/app/tests/integration/: test_create_org.py  test_create_user.py  test_members_post_and_list.py  test_tenant_members_isolation.py  test_tenant_schema_create.py
Fastapi/ima/app/tests/unit/: test_config.py  test_config_logging.py  test_db_ping_direct.py  test_logging_json.py
Fastapi/ima/app/tests/utils/: ensure_tenant_tables.py
Fastapi/ima/app/v1/: __init__.py
Fastapi/ima/app/v1/routers/: db.py  health.py  members.py  orgs.py  users.py  whoami.py
Fastapi/multitenancy/: README.md  main.py  pyproject.toml
Fastapi/multitenancy/app/core/db/: database.py  settings.py
Fastapi/multitenancy/app/core/helper/: errors.py  response.py  student.py  tenant.py
Fastapi/multitenancy/app/core/models/: __init__.py  base.py  student.py  tanent.py
Fastapi/multitenancy/app/v1/: api.py
Fastapi/multitenancy/scripts/: create_tenant.py  ensure_tenant_tables.py
(+84 files in other folders)
