[project]
name = "fastapi-mongo"
version = "0.1.0"
description = "practice based on https://testdriven.io/blog/fastapi-mongo/#deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.10.1",
    "pymongo[srv]>=4.14.1",
]
