[project]
name = "ima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg==0.28.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-json-logger>=3.3.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "sqlmodel>=0.0.24",
]
