# pyproject.toml
[project]
name = "ima"
version = "0.1.0"
description = "IMA: tenant-aware Identity & Access microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5",
  "asyncpg==0.28.0",
  "fastapi[standard]>=0.116.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.10.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.24.0",
  "python-json-logger>=3.3.0",
  "sqlalchemy[asyncio]>=2.0.43",
  "sqlmodel>=0.0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# If you *really* want Alembic to know where scripts live via TOML, you may keep:
# (Everything else — loggers/handlers/formatters — MUST stay in alembic.ini)
[tool.alembic]
script_location = "app/core/db/alembic"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.11",
]
